CORE-36447: Classic PDP layout theming on mobile and CS/US fixes on newpdp.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/wishlist/component/_wishlist-newpdp.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/wishlist/component/_wishlist-newpdp.scss
@@ -34,5 +34,15 @@ body.wishlist-enabled {
         width: 100%;
       }
     }
+
+    .magv2-crossell-popup-content-wrapper {
+      position: relative;
+
+      .wishlist-icon {
+        position: absolute;
+        top: 1.25rem;
+        #{$right}: 1.25rem;
+      }
+    }
   }
 }
